<resources>

    <string name="app_name">GithubTest</string>
    <string name="user_repos_search_hint">Search for user\'s repos</string>
    <string name="user_search_hint">Search for GitHub users</string>

    <string name="search_user_name">UserName: %s</string>
    <string name="search_user_repos">Public Repos: %d</string>

    <string name="repo_forks">Forks: %d</string>
    <string name="repo_stargazers">Stargazers: %d</string>

    <string name="user_details_name_title">UserName:</string>
    <string name="user_details_email_title">Email:</string>
    <string name="user_details_join_date_title">Join Date:</string>
    <string name="user_details_location_title">Location:</string>
    <string name="user_details_followers_title">Followers:</string>
    <string name="user_details_following_title">Following:</string>
    <string name="user_details_description">Description:</string>
    <string name="user_repos_no_search_results">No search results for repos</string>
    <string name="users_no_search_results">No search results for users</string>
    <string name="no_data">no data</string>

</resources>