<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.userdetails.UserDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/user_details_header_margin">

        <com.github.test.view.RoundedImageView
            android:id="@+id/user_details_image"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_avatar"
            android:scaleType="centerCrop"
            android:background="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/user_details_margin"
            android:layout_marginEnd="@dimen/user_details_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_details_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/UserDetailsTheme"
                android:text="@string/user_details_name_title"/>

            <TextView
                android:id="@+id/user_details_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/UserDetailsTheme"
                android:text="@string/user_details_email_title"/>

            <TextView
                android:id="@+id/user_details_location"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/UserDetailsTheme"
                android:text="@string/user_details_location_title"/>

            <TextView
                android:id="@+id/user_details_join_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/UserDetailsTheme"
                android:text="@string/user_details_join_date_title"/>

            <TextView
                android:id="@+id/user_details_followers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/UserDetailsTheme"
                android:text="@string/user_details_followers_title"/>

            <TextView
                android:id="@+id/user_details_following"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/UserDetailsTheme"
                android:text="@string/user_details_following_title"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/user_details_biography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/user_details_margin"
        android:maxLines="4"
        android:ellipsize="end"
        android:theme="@style/UserDetailsTheme"
        android:text="@string/user_details_description"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/close_icon_size"
                android:layout_height="@dimen/close_icon_size"
                android:src="@drawable/svg_search"
                android:padding="8dp"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/search_repos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:padding="8dp"
                android:maxLines="1"
                android:theme="@style/EditTextTheme"
                android:textColorHint="@color/light_gray"
                android:hint="@string/user_repos_search_hint"/>

            <ImageView
                android:id="@+id/search_repos_close"
                android:layout_width="@dimen/close_icon_size"
                android:layout_height="@dimen/close_icon_size"
                android:src="@drawable/svg_close"
                android:padding="8dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/filter_repo_progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:indeterminateDrawable="@drawable/ic_progress"
            android:indeterminate="true"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_repos_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

</LinearLayout>